<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantalla2">

    <EditText
        android:id="@+id/txt_valor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/txt_valor1"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txt_valor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/txt_valor2"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor1"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor2">

        <RadioButton
            android:id="@+id/rb_suma"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:text="@string/rb_suma"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_resta"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:text="@string/rb_resta"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_producto"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:text="@string/rb_producto"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_division"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:text="@string/rb_dividir"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/button4"
        android:layout_width="170dp"
        android:layout_height="73dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:onClick="resolver"
        android:text="@string/button"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="129dp"
        android:layout_height="54dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_resultado"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="376dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:onClick="regresar"
        android:text="@string/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_resultado" />
</androidx.constraintlayout.widget.ConstraintLayout>