<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantalla4">

    <EditText
        android:id="@+id/etr_valor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/etr_valor1"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etr_valor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/etr_valor2"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etr_valor1" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="244dp"
        android:layout_height="78dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etr_valor2"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button8"
        android:layout_width="217dp"
        android:layout_height="92dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:onClick="cal"
        android:text="@string/botto8"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/tv_resultado3"
        android:layout_width="233dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_resultado3"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button9"
        android:layout_width="343dp"
        android:layout_height="73dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:onClick="atras"
        android:text="@string/botton9"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_resultado3" />
</androidx.constraintlayout.widget.ConstraintLayout>