<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="145dp"
        android:layout_height="85dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="268dp"
        android:onClick="check"
        android:text="@string/bt2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="79dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="352dp"
        android:onClick="spinner"
        android:text="@string/bt3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="135dp"
        android:layout_height="79dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="188dp"
        android:onClick="radio"
        android:text="@string/bt1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>